# Architecture

toudou_cli_starter/: .pdm-python  README.md  dev.env  pyproject.toml
toudou_cli_starter/db/: todos.db  toudou.db
toudou_cli_starter/src/toudou/: __init__.py  dev.env  form.py  models.py  services.py  todo_blueprint.py  views.py  viewsWeb.py
toudou_cli_starter/src/toudou/templates/: ImportCsv.html  accueil.html  base.html  create.html  delete.html  downloadCsv.html  importCsv.html  todos.html  update.html
toudou_cli_starter/src/toudou/vue/: todo_blueprint.py  viewsWeb.py
toudou_cli_starter/src/toudou/vue/templates/: accueil.html  base.html  create.html  downloadCsv.html  importCsv.html
