[project]
name = "Toudou"
version = "0.1"
description = "A simple task manager."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "sqlalchemy>=2.0.27",
]
requires-python = ">=3.10"
license = { text = "MIT" }


[project.scripts]
toudou = "toudou.views:cli"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

